--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -7,7 +7,8 @@
 
 nav {
     font-family: sans-serif;
-    font-size: 10px;
+    font-size: 18px;
+    background-image: url('../images/map-bg.jpg');
 }
 
 #main {
@@ -20,7 +21,11 @@ nav {
         - Use the 'Supermercado One' font 
         - set the font size to 45px 
         - set the font color to #5d4037
-*/
+*/ h1 {
+    font-family: 'supermercado one'; font-size: 45px;
+    color: #5d4037
+
+}
 
 /* 
     Update the following ruleset (#menu) to accomplish the following:
@@ -30,6 +35,7 @@ nav {
 #menu {
     columns: 400px 2;
     column-gap: 100px;
+    column-rule: 2px dashed rosybrown;
 }
 
 section {
@@ -38,14 +44,24 @@ section {
 
 h2 {
     margin: 0;
+    column-span: none;
 }
 
 /* 
     Add a CSS ruleset targeting the headings of the menu (e.g. "Starters") to accomplish the following:
         - Show each of the section headings of the menu  in small caps
         - set the font color to #6d4c41
-*/
+*/.div {
+    font-variant: small-caps;
+    color: #6d4c41;
+    font-weight: black;
+    
+}
+.h2 {
+    font-size: 10px;
+    font: bold;
 
+}
 /* 
     Add a CSS ruleset targeting the name of each menu item to accomplish the following:
         - Set the font size to 20px
@@ -55,6 +71,16 @@ h2 {
 dd {
     margin: 0 0 12px 0;
     display: flex;
+    font-size: 20px;
+    font: bold;
+}
+
+dd::after {
+    content: " ";
+    display: block;
+    clear: both;
+    margin-bottom: 15px;
+    position: absolute;
 }
 
 .details {
@@ -70,6 +96,9 @@ dd {
 .price {
     order: 2;
     padding-left: 10px;
+    color: firebrick;
+    font-size: 40px;
+    float: right;
 }
 
 address {
@@ -79,4 +108,8 @@ address {
 /* 
     Add a CSS ruleset targeting the footer to accomplish the following:
         - Draw a 2px dashed rosybrown border
-*/
+*/ .footer {
+       border: 2px dashed rosybrown;
+       
+
+}
