--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -2,11 +2,15 @@
 /* 
     Add a CSS ruleset to accomplish the following:
     - Use the 'Oswald' font family at 14px throughout the body of the document.
-*/
+*/ 
+
 
 nav {
     font-family: sans-serif;
     font-size: 10px;
+    font-family: oswald; font-size: 14px;
+    
+    
 }
 
 #main {
@@ -24,6 +28,10 @@ nav {
 #menu {
     columns: 420px 2;
     column-gap: 60px;
+    font-family: 'Bungee Inline';
+    font-size: 46px;
+    font-weight: lighter;
+    
 }
 
 section {
@@ -38,7 +46,10 @@ h2 {
 /* 
     Add a CSS ruleset targeting targeting the headings of the menu (e.g. "Starters") to accomplish the following:
         - Show each of the section headings of the menu in uppercase
-*/
+*/.dive {
+      font-variant: uppercase;
+
+}
 
 /* 
      Update the following ruleset (dt) to accomplish the following:
@@ -48,12 +59,18 @@ h2 {
 
 dt {
     display: inline;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 /* 
     Add a CSS ruleset to accomplish the following:
     - Make a comma appear after the name of each menu item
-*/
+*/ .comma: :not(: :last-child):after {
+             content: ", "
+}
+     
+}
 
 dd {
     display: inline;
@@ -76,8 +93,16 @@ dd::after {
     Add a CSS ruleset targeting the footer to accomplish the following:
     - right align the text in the footer
 */
+.footer {
+      align-items: right;
+}
 
 /* 
     Add a CSS ruleset targeting the starters and desserts sections to accomplish the following:
     - draw a 2px black border around the sections
 */
+.starter, deserter {
+    border: 2px black;
+    box-sizing: content-box;
+    
+}
